<resources>
    <string name="app_name">Naval Battle</string>
    <string name="action_settings">Settings</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">Battleship (also Battleships or Sea Battle) is a guessing game for two players. It is played on ruled grids (paper or board) on which each players fleet of ships (including battleships) are marked. The locations of the fleets are concealed from the other player. Players alternate turns calling "shots" at the other players ships, and the objective of the game is to destroy the opposing players fleet.</string>
    <string name="app_version" translatable="false">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_version">Version</string>
    <string name="avatar">Avatar</string>
    <string name="choose_avatar">Click to choose your avatar</string>
    <string name="username">Username</string>
    <string name="default_username">User</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="against_device">Against device</string>
    <string name="summary_take_photo">Click to take a photo directly from camera</string>
    <string name="title_take_photo">Take photo</string>
    <string name="device">Device</string>
    <string name="title_activity_ship_setup">Setup ships</string>
    <string name="create_server">Create server</string>
    <string name="join_server">Join server</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dismiss">Dismiss</string>
    <string name="sure_want_to_exit">Are you sure you want to exit?</string>
    <string name="wait_connection">Waiting for a client…</string>
    <string name="serverdlg_title">Naval Battle Server</string>
    <string name="action_help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="large_text">"<b>Game modes</b>\n\nAgainst device : Play locally against your device.\nAgainst a friend : Play online against a friend connected to the same network as you.\n\n<b>Rules</b>\n\nThe game board is 8x8.\nAt the beginning of the game each player is his fleet in places that do not want to board
can guide the boats in the way they want.\nBoats may not be placed on adjacent cells (vertically, horizontally or
diagonal).\nThe first player to make shots on the opponent must be drawn at the beginning of
game.\nEach player gives 3 shots, selecting the desired cell.\nOnly after indicating the 3 shots do you receive information about any hits you got.\nIf a player manages to hit all 3 of his shots, he can move one of their boats a position. This shift can be done for homes that to be occupied by a vessel which, in the meantime, has been sunk. Displacement should respect the rule that no adjacent cells.\nThe game ends when the fleet of one of the opponents is totally sunk.\n
        \nYou can view the traditional rules here : <a href="https://en.wikipedia.org/wiki/Battleship_(game)">Wikipedia</a>"
    </string>
    <string name="exit">Exit</string>
    <string name="game_history">Game history</string>
    <string name="no_connection">No network connection</string>
    <string name="opponent_disconnected">Your opponent has disconnected! You\'ll be playing against device</string>
    <string name="player">Player</string>
    <string name="opponent">Opponent</string>
    <string name="game_over">Game over</string>
    <string name="has_won">has won!</string>
    <string name="title_activity_history">Game history</string>
    <string name="waiting_for_opponent">Waiting for your opponent to connect</string>
    <string name="click_to_rotate">Click on ship to rotate!</string>
    <string name="long_press_to_move">Long press to move!</string>
    <string name="error_connecting">Error connecting</string>
    <string name="you_can_move_ship">Do you want to move one of your ships?</string>Histórico de jogos
    <string name="tree_successful_shots">Three successful shots</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="click_to_move">Click on cell to move ship</string>
    <string name="cant_move_ship">Can\'t move to that position</string>
    <string name="choose_healthy_ship">Choose healthy ship</string>
    <string name="credits">Credits</string>
    <string name="summary_credits"><b>Professor Álvaro Santos</b> - AMOV\nBy lectures and project statement</string>
</resources>