<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <EditTextPreference
            android:defaultValue="@string/default_username"
            android:key="key_username"
            android:summary="@string/default_username"
            android:title="@string/username" />

        <Preference
            android:capitalize="words"
            android:icon="@drawable/player_avatar"
            android:inputType="textCapWords"
            android:key="key_avatar"
            android:summary="@string/choose_avatar"
            android:title="@string/avatar" />

        <Preference
            android:key="key_take_photo"
            android:summary="@string/summary_take_photo"
            android:title="@string/title_take_photo" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <Preference
            android:key="key_credits"
            android:summary="@string/summary_credits"
            android:title="@string/credits" />
    </PreferenceCategory>
</PreferenceScreen>