<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/shadowView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#cc212121"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/create_server_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/join_server_layout"
            app:layout_constraintRight_toRightOf="@id/activity_main">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:elevation="2dp"
                android:padding="5dip"
                android:text="@string/create_server" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:onClick="createServer"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_group_add" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/join_server_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/against_device_layout"
            app:layout_constraintRight_toRightOf="@id/activity_main">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:elevation="2dp"
                android:padding="5dip"
                android:text="@string/join_server" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:onClick="joinServer"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_group" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/against_device_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/fab"
            app:layout_constraintRight_toRightOf="@id/activity_main">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:elevation="2dp"
                android:padding="5dip"
                android:text="@string/against_device" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/amber"
                android:onClick="againstDevice"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_phone" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="@id/activity_main"
            app:layout_constraintRight_toRightOf="@id/activity_main"
            app:srcCompat="@drawable/ic_play" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>